--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>Canvas tutorial</title>
+    <title>Shooting Game</title>
     <script src="app.js"></script>
     <style type="text/css">
       canvas { border: 1px solid black; }
