add scrolling stars in background

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     </style>
   </head>
   <body>
-    <canvas id="test" width="500" height="500"></canvas>
+    <canvas id="gameArea" width="500" height="500"></canvas>
   </body>
 </html>
