--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
   </head>
   <body>
     <canvas id="gameArea" width="500" height="500"></canvas>
+    <h3>Controls</h3>
+    <ul>
+	    <li>WASD to move ship</>
+    </ul>
   </body>
 </html>
