--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <canvas id="gameArea" width="500" height="500"></canvas>
     <h3>Controls</h3>
     <ul>
-	    <li>WASD to move ship</>
+	    <li>WASD: move ship</>
+	    <li>Space: fire missiles</>
     </ul>
   </body>
 </html>
