add game over and reset

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	    <li>WASD: move ship</>
 	    <li>Space: fire missiles</>
 	    <li>b: drop bomb</>
+	    <li>r: restart on game over</>
     </ul>
   </body>
 </html>
