tweak column layout

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
 				table-layout: fixed;
 				width: 760px;
 				border-spacing: 0;
-				border-collapse: collapse;
 			}
-      			canvas { border: 5px solid blue; }
+			canvas {
+				border: 5px solid blue;
+			}
       			td { 
-				width: 253px;
+				width: 250px;
 	   			font-size: 1.5em;
 				text-align: center;
       			}
@@ -40,12 +41,6 @@
 			#values {
 				color: red;
 			}
-      			#row2 {
-				box-sizing: border-box;
-      			}
-      			#row3 {
-				box-sizing: border-box;
-      			}
 			.content {
 				max-width: 760px;
 				margin: auto;
