move bombs to F for one hand control

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<td class='control_label'>WASD</td> 
 					<td class='control_label'>SPACE</td> 
 					<td class='control_label'>SHIFT</td> 
-					<td class='control_label'>B</td> 
+					<td class='control_label'>F<td> 
 	  			</tr>
 	  			<tr>
 		  			<td class='control_description'>MOVE SHIP</td> 
