add humorous alien profiles

--- a/index.html
+++ b/index.html
@@ -49,6 +49,105 @@
 					<td class='control_description' colspan='4'>RESTART AFTER GAME OVER</td> 
 	  			</tr>
   			</table>
+			<h3 class='meet'>MEET THE CAST</h3>
+  			<table>
+	  			<tr>
+					<td class='cast top first'><img src='red.png', alt='simple'></td> 
+					<td class='cast top '><img src='blue.png', alt='siney'</td> 
+					<td class='cast top '><img src='yellow.png', alt='crawly'</td> 
+					<td class='cast top '><img src='white.png', alt='fasty'</td> 
+					<td class='cast top'><img src='green.png', alt='circley'</td> 
+	  			</tr>
+	  			<tr>
+					<td class='cast first'>SIMPLE</td> 
+					<td class='cast'>SINEY</td> 
+					<td class='cast'>CRAWLEY</td> 
+					<td class='cast'>FASTY</td> 
+					<td class='cast'>CIRCLEY</td> 
+	  			</tr>
+	  			<tr>
+					<td class='cast_description first'>
+						<ul>
+							<li>BEHAVIOR</li>
+							<li class='description'>MARCHING BLINDLY FORWARD WITHOUT A CARE</li>
+							<li>LIKES</li>
+							<li class='description bullet'>* CHACHKIES</li>
+							<li class='description bullet'>* OVERLY SCENTED CANDLES</li>
+							<li class='description bullet'>* FAST FASHION</li>
+							<li class='description'>&nbsp</li>
+							<li>DISLIKES</li>
+							<li class='description bullet'>* BIG WORDS</li>
+							<li class='description bullet'>* DIFFICULT CONVERSATIONS</li>
+							<li class='description bullet'>* THE X AXIS</li>
+						</ul>
+					</td> 
+					<td class='cast_description'>
+						<ul>
+							<li>BEHAVIOR</li>
+							<li class='description'>BACK AND FORTH... FOREVER</li>
+							<li class='description'>&nbsp</li>
+							<li>LIKES</li>
+							<li class='description bullet'>* TUNING FORKS</li>
+							<li class='description bullet'>* METRONOMES</li>
+							<li class='description bullet'>* SURFING</li>
+							<li class='description'>&nbsp</li>
+							<li class='description'>&nbsp</li>
+							<li>DISLIKES</li>
+							<li class='description bullet'>* 90 DEGREE PHASE SHIFTS</li>
+							<li class='description bullet'>* STUPID OVERACHIEVER CIRCLEY</li>
+						</ul>
+					</td> 
+					<td class='cast_description'> 
+						<ul>
+							<li>BEHAVIOR</li>
+							<li class='description'>CREEPING ACROSS THE BOTTOM QUARTER</li>
+							<li class='description'>&nbsp</li>
+							<li>LIKES</li>
+							<li class='description bullet'>* STALKING</li>
+							<li class='description bullet'>* SHOWING UP UNINVITED</li>
+							<li class='description'>&nbsp</li>
+							<li class='description'>&nbsp</li>
+							<li>DISLIKES</li>
+							<li class='description bullet'>* RESTRAINING ORDERS</li>
+							<li class='description bullet'>* VERTICAL MOBILITY</li>
+						</ul>
+
+					</td> 
+					<td class='cast_description'>
+						<ul>
+							<li>BEHAVIOR</li>
+							<li class='description'>GOING NOWHERE FAST</li>
+							<li class='description'>&nbsp</li>
+							<li class='description'>&nbsp</li>
+							<li>LIKES</li>
+							<li class='description bullet'>* AGGRESSIVE EXTROVERTS</li>
+							<li class='description bullet'>* MUSCLE CARS</li>
+							<li class='description bullet'>* BRAGGING ABOUT HIS SPEED</li>
+							<li>DISLIKES</li>
+							<li class='description bullet'>* BURNOUT</li>
+							<li class='description bullet'>* HANGOVERS</li>
+							<li class='description bullet'>* TURTLES</li>
+						</ul>
+					</td> 
+					<td class='cast_description'> 
+						<ul>
+							<li>BEHAVIOR</li>
+							<li class='description'>WELL ROUNDED</li>
+							<li class='description'>&nbsp</li>
+							<li class='description'>&nbsp</li>
+							<li>LIKES</li>
+							<li class='description bullet'>* SINEY (IT'S <b>NOT</b> MUTUAL)</li>
+							<li class='description bullet'>* PIZZA</li>
+							<li class='description bullet'>* WORLD TRAVEL</li>
+							<li class='description'>&nbsp</li>
+							<li>DISLIKES</li>
+							<li class='description bullet'>* PLAID</li>
+							<li class='description bullet'>* CUBISM</li>
+							<li class='description bullet'>* BEING PUT IN A BOX</li>
+						</ul>
+					</td> 
+	  			</tr>
+  			</table>
 		</div>
 	</body>
 </html>
