update html image tags with new image paths

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   	<body>
 		<div class='content'>
 			<div class='title'>
-				<img src='title.png' alt='title'>
+				<img src='imgs/title.png' alt='title'>
 			</div>
   			<canvas id='gameArea' width='750' height='500'></canvas>
   			<table id='values'>
@@ -24,9 +24,9 @@
   			<table id='labels'>
 	  			<tr>
 		  			<td id='score_label'>SCORE</td> 
-					<td><img src='missiles.png', alt='missiles'></td> 
-					<td><img src='shield.png', alt='shield'</td> 
-					<td><img src='bomb.png', alt='bomb'</td> 
+					<td><img src='imgs/missiles.png', alt='missiles'></td> 
+					<td><img src='imgs/shield.png', alt='shield'</td> 
+					<td><img src='imgs/bomb.png', alt='bomb'</td> 
 	  			</tr>
 
   			</table>
@@ -54,11 +54,11 @@
 			<h3 class='meet'>MEET THE CAST</h3>
   			<table>
 	  			<tr>
-					<td class='cast top'><img src='red.png', alt='simple'></td> 
-					<td class='cast top'><img src='blue.png', alt='siney'</td> 
-					<td class='cast top'><img src='yellow.png', alt='crawly'</td> 
-					<td class='cast top'><img src='white.png', alt='fasty'</td> 
-					<td class='cast top last'><img src='green.png', alt='circley'</td> 
+					<td class='cast top'><img src='imgs/red.png', alt='simple'></td> 
+					<td class='cast top'><img src='imgs/blue.png', alt='siney'</td> 
+					<td class='cast top'><img src='imgs/yellow.png', alt='crawly'</td> 
+					<td class='cast top'><img src='imgs/white.png', alt='fasty'</td> 
+					<td class='cast top last'><img src='imgs/green.png', alt='circley'</td> 
 	  			</tr>
 	  			<tr>
 					<td class='cast'>SIMPLE</td> 
